# ROUTE25

./: README.md
11.1/: Preprocess.ipynb  data_umap.csv  processed_data.csv  pyproject.toml
11.1/qws1/: data1.csv
11.1/qws2/: data.csv
11_1/: .gitignore  ML.ipynb  ML_classification.ipynb  ML_regression_exps.ipynb  ML_regression_final_model.ipynb  Preprocess.ipynb  data_umap.csv  ml_regression.ipynb  processed_data.csv  pyproject.toml
november_tasks/: .gitignore  11_1_2.py  11_1_savings.ipynb  8_11_2.ipynb  ML_classification.ipynb  Preprocess.ipynb  README.md  main.py  pyproject.toml
november_tasks/Classification/: 8_11_2_classification.ipynb  ML_classification.ipynb
november_tasks/Regression/: 8_11_2_regression.ipynb  ML_regression.ipynb
